Fix spacing and add links

--- a/index.css
+++ b/index.css
@@ -96,6 +96,16 @@ body {
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
+  text-decoration: none;
+}
+
+.contact-me-text {
+    padding-top: 4px;
+}
+
+.arrow {
+  display: flex;
+  align-items: center;
 }
 
 .media-links-container {
@@ -123,6 +133,7 @@ body {
   border: 1px solid #00ABB6;
   box-sizing: border-box;
   border-radius: 8px;
+  text-decoration: none;
 }
 
 .background-image {
